Fixed overflow problem, Refactored background style, Added style for result table

--- a/style.css
+++ b/style.css
@@ -10,8 +10,11 @@
   /* border: dashed white 0.01pt; */
 }
 body{
+  /*  */
+  margin: 0 auto;
   background: #414FBE;
-  min-width: 800px;
+  width: 100%;
+  max-width: 800px;
 }
 header{
   display: block;
@@ -39,14 +42,16 @@ header{
 #playground #user #user_choice{
   margin-top: 10px;
   display: block;
-  background: var(--rock) no-repeat center ;
+  background-image: none;
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: contain;
+  background-color: #BEB041;
   width: 200px;
   height: 180px;
   justify-self: center;
   border: solid 1px #ccc;
   border-radius: 40px;
-  background-color: #BEB041;
 }
 #possible_choices{
   display: grid;
@@ -79,16 +84,21 @@ header{
   background-color: #41BE71;
 }
 #comp{
-  margin-top: 10px;
   /* display: block; */
-  background: var(--scissor) no-repeat center ;
+  display: flex;
+  justify-content: center;
+}
+#comp #comp_choice{
+  margin-top: 10px;
+  background-image: none;
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: contain;
+  background-color: #BEB041;
   height: 180px;
   width: 200px;
-  justify-self: center;
   border: solid 1px #ccc;
   border-radius: 40px;
-  background-color: #BEB041;
 }
 
 /* result */
@@ -105,6 +115,7 @@ header{
   border-radius: 20px;
 }
 #table-title{
+  /*  */
   width: 500px;
   padding: 10px 0;
   justify-self: center;
@@ -112,6 +123,7 @@ header{
   border-bottom: solid 1px;
 }
 #table{
+  /*  */
   width: 500px;
   justify-self: center;
   display: grid;
@@ -132,7 +144,25 @@ header{
 #user-name{
   height: 40%;
   border-bottom: solid 1px;
+  display: grid;
+  place-items: center;
 }
+#user-name p{
+  text-align: center;
+  font-size: larger;
+  font-weight: bold;
+}
+#user-score{
+  height: 60%;
+  display: grid;
+  place-items: center;
+}
+#user-score p{
+  text-align: center;
+  font-size: x-large;
+  font-weight: bold;
+}
+
 #comp-column{
   grid-area: comp-column;
   border-bottom: solid 1px;
@@ -141,6 +171,23 @@ header{
 #comp-name{
   height: 40%;
   border-bottom: solid 1px;
+  display: grid;
+  place-items: center;
+}
+#comp-name p{
+  text-align: center;
+  font-size: larger;
+  font-weight: bold;
+}
+#comp-score p{
+  text-align: center;
+  font-size: x-large;
+  font-weight: bold;
+}
+#comp-score{
+  height: 60%;
+  display: grid;
+  place-items: center;
 }
 #result-word{
   grid-area: result-word;
